# youtube-summarizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  multi.md  pyproject.toml  requirements.txt  summary.txt  test-results.txt
pipeline/: downloader.py  summarizer.py  transcriber.py
prompts/: summarization.md
summarize_yt/: __init__.py  main.py
summarize_yt/pipeline/: config.py  downloader.py  summarizer.py  transcriber.py
tests/: test_downloader.py  test_integration.py  test_main.py  test_summarizer.py  test_transcriber.py
